# AISearch

./: .gitignore  AISearch.cabal  README.md  stack.yaml
app/: Main.hs  TilesMain.hs  TravelAStarMain.hs  TravelBFSMain.hs  TravelDFSMain.hs
examples/: 8tiles.txt  travel.txt
help/: 8tiles.txt  travel.txt
src/: AStar.hs  Manhattan.hs  Problem.hs  Swap.hs  Tiles.hs
src/Algorithms/: AStar.hs  BreadthFirst.hs  DepthFirst.hs
src/Manhattan/: Tests.hs
src/Problems/: Tiles.hs  TilesInternal.hs  Travel.hs  TravelBFS.hs  TravelDFS.hs  TravelInternal.hs
src/Problems/Tiles/: Internal.hs  Tests.hs
src/Problems/Travel/: AStar.hs  BFS.hs  DFS.hs  Internal.hs
src/Swap/: Tests.hs
test/: Main.hs  ManhattanTest.hs  Spec.hs  TestRunner.hs
