name:                AISearch
version:             0.1.2.1
synopsis:            Haskell toolkit of common AI search algorithms
description:         Please see README.md
homepage:            https://github.com/Druid-of-Luhn/AISearch#readme
license:             GPL-3
license-file:        LICENSE
author:              Billy Brown
maintainer:          druidofluhn@gmail.com
copyright:           Billy Brown
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Algorithms
                     , src/Problems
  exposed-modules:     AStar
                     , BreadthFirst
                     , DepthFirst
                     , Manhattan
                     , Problem
                     , Tiles
                     , TilesInternal
                     , Travel
                     , TravelInternal
                     , TravelBFS
                     , TravelDFS
  build-depends:       base >= 4.8
                     , array >= 0.5
                     , containers >= 0.5
  default-language:    Haskell2010
  default-extensions:  FlexibleInstances
                     , FunctionalDependencies
                     , MultiParamTypeClasses
                     , TypeSynonymInstances

executable AISearch-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       TilesMain
                     , TravelBFSMain
                     , TravelDFSMain
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , AISearch
  default-language:    Haskell2010

test-suite AISearch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AISearch
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Druid-of-Luhn/AISearch
